Fixed infotop overflow For eBay/ebayui-core#857

--- a/src/less/tooltip/base/tooltip.less
+++ b/src/less/tooltip/base/tooltip.less
@@ -162,6 +162,10 @@ button.tooltip__host.icon-btn {
     width: @icon-width;
 }
 
+button.infotip__host.icon-btn {
+    overflow: visible;
+}
+
 @media (min-width: 601px) {
     .tooltip__overlay,
     .infotip__overlay,
